[package]
name = "dtls-example"
version = "0.1.0"
authors = ["Jonas Bushart <jonas@bushart.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"

[dependencies.udp-dtls]
git = "https://github.com/aav/udp-dtls/"
branch = "async"
features = [ "async" ]

[dependencies.tokio]
version = "0.2.11"
features = [
    "dns",
    "io-util",
    "macros",
    "rt-threaded",
    "time",
    "udp",
]
